fix: lint errors after restore
